--- a/app/src/main/res/layout/fragment_restaurant.xml
+++ b/app/src/main/res/layout/fragment_restaurant.xml
@@ -60,62 +60,67 @@
             android:src="@drawable/photo_button"
             android:visibility="gone"/>
     </LinearLayout>
-
-<TabHost
-    android:id="@android:id/tabhost"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_below="@+id/linearLayout">
-    <LinearLayout
-        android:id="@+id/fragmentLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical">
-        <TabWidget
-            android:id="@android:id/tabs"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#000"
-            android:dividerPadding="0dp"
-            android:showDividers="middle">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:tag="Infos"
-                android:text="À Propos"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:tag="Commentaires"
-                android:text="Avis"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:tag="Gallerie"
-                android:text="Galerie"
-                />
-
-        </TabWidget>
-        <FrameLayout
-            android:id="@android:id/tabcontent"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout">
+        <TabHost
+            android:id="@android:id/tabhost"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
-            <include layout="@layout/restaurant_infos"/>
-            <ListView
-                android:id="@+id/listViewCommentaire"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/fragmentLayout"
+                android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:background="#fff"/>
-            <include layout="@layout/restaurant_gallerie"/>
+                android:orientation="vertical">
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#000"
+                    android:dividerPadding="0dp"
+                    android:showDividers="middle">
 
-        </FrameLayout>
-    </LinearLayout>
-</TabHost>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:tag="Infos"
+                        android:text="À Propos"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:tag="Commentaires"
+                        android:text="Avis"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:tag="Gallerie"
+                        android:text="Galerie"
+                        />
+
+                </TabWidget>
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+                    <include layout="@layout/restaurant_infos"/>
+                    <ListView
+                        android:id="@+id/listViewCommentaire"
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:background="#fff"/>
+                    <include layout="@layout/restaurant_gallerie"/>
+
+                </FrameLayout>
+            </LinearLayout>
+        </TabHost>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
